feat: add a new turtle for tile

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4151,7 +4151,8 @@
     "\n",
     "import turtle\n",
     "t = turtle.Turtle()\n",
-    "\n",
+    "ti = turtle.Turtle()\n",
+    "ti.hideturtle()\n",
     "myWin = turtle.Screen()\n",
     "\n",
     "t.penup()\n",
@@ -4161,6 +4162,8 @@
     "length = 200\n",
     "padding = 5 \n",
     "t.speed(1)\n",
+    "\n",
+    "\n",
     "class tower:\n",
     "    def __init__(self, t, x, y, length):\n",
     "        self.t = t\n",
@@ -4177,17 +4180,23 @@
     "        t.left(90)\n",
     "        t.forward(self.length)\n",
     "        t.right(90)\n",
-    "    \n",
-    "    def draw_tile(self, length_of_tile, pad):\n",
-    "        tile_x_axis = self.x_axis - length_of_tile/2\n",
-    "        tile_y_axis = self.y_axis + pad\n",
-    "        t.penup()\n",
-    "        t.goto(tile_x_axis,tile_y_axis)\n",
-    "        t.pensize(4)\n",
-    "        t.pencolor(\"brown\")\n",
-    "        t.pendown()\n",
-    "        t.left(0)\n",
-    "        t.forward(length_of_tile)\n",
+    "\n",
+    "class tile:\n",
+    "    def __init__(self,ti, lot, pad):\n",
+    "        self.ti = ti\n",
+    "        self.length_of_tile =  lot\n",
+    "        self.padding = pad\n",
+    "    def draw_tile(self, t):\n",
+    "        tile_x_axis = t.x_axis - self.length_of_tile/2\n",
+    "        tile_y_axis = t.y_axis + self.padding\n",
+    "        ti.showturtle()\n",
+    "        ti.penup()\n",
+    "        ti.goto(tile_x_axis,tile_y_axis)\n",
+    "        ti.pensize(4)\n",
+    "        ti.pencolor(\"brown\")\n",
+    "        ti.pendown()\n",
+    "        ti.left(0)\n",
+    "        ti.forward(self.length_of_tile)\n",
     "\n",
     "    \n",
     "\n",
@@ -4197,9 +4206,15 @@
     "t2 = tower(t, 0, 0, length)\n",
     "t3 = tower(t, 100, 0, length)\n",
     "\n",
+    "\n",
     "t1.draw()\n",
     "t2.draw()\n",
     "t3.draw()\n",
+    "\n",
+    "\n",
+    "tile_b = tile(ti, 100, padding)\n",
+    "tile_m = tile(ti, 80, padding+20)\n",
+    "tile_s = tile(ti, 60, padding+40)\n",
     "\n",
     "#t1.draw_big_tile()\n",
     "#t1.draw_medium_tile()\n",
@@ -4209,9 +4224,9 @@
     "#t2.draw_medium_tile()\n",
     "#t2.draw_small_tile()\n",
     "\n",
-    "t3.draw_tile(100, padding)\n",
-    "t3.draw_tile(80, padding + 20)\n",
-    "t3.draw_tile(60, padding + 40)\n",
+    "tile_b.draw_tile(t3)\n",
+    "tile_m.draw_tile(t3)\n",
+    "tile_s.draw_tile(t3)\n",
     "\n"
    ]
   },
