chore: add jupyter metadata

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4143,7 +4143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4172,31 +4172,35 @@
     "        self.length = length\n",
     "\n",
     "    def draw(self):\n",
-    "        t.penup()\n",
-    "        t.goto(self.x_axis, self.y_axis)\n",
-    "        t.pensize(2)\n",
-    "        t.pencolor(\"blue\")\n",
-    "        t.pendown()\n",
-    "        t.left(90)\n",
-    "        t.forward(self.length)\n",
-    "        t.right(90)\n",
+    "        self.t.penup()\n",
+    "        self.t.goto(self.x_axis, self.y_axis)\n",
+    "        self.t.pensize(2)\n",
+    "        self.t.pencolor(\"blue\")\n",
+    "        self.t.pendown()\n",
+    "        self.t.left(90)\n",
+    "        self.t.forward(self.length)\n",
+    "        self.t.right(90)\n",
     "\n",
     "class tile:\n",
     "    def __init__(self,ti, lot, pad):\n",
     "        self.ti = ti\n",
     "        self.length_of_tile =  lot\n",
     "        self.padding = pad\n",
+    "\n",
     "    def draw_tile(self, t):\n",
     "        tile_x_axis = t.x_axis - self.length_of_tile/2\n",
     "        tile_y_axis = t.y_axis + self.padding\n",
-    "        ti.showturtle()\n",
-    "        ti.penup()\n",
-    "        ti.goto(tile_x_axis,tile_y_axis)\n",
-    "        ti.pensize(4)\n",
-    "        ti.pencolor(\"brown\")\n",
-    "        ti.pendown()\n",
-    "        ti.left(0)\n",
-    "        ti.forward(self.length_of_tile)\n",
+    "        self.ti.showturtle()\n",
+    "        self.ti.penup()\n",
+    "        self.ti.goto(tile_x_axis,tile_y_axis)\n",
+    "        self.ti.pensize(4)\n",
+    "        self.ti.pencolor(\"brown\")\n",
+    "        self.ti.pendown()\n",
+    "        self.ti.left(0)\n",
+    "        self.ti.forward(self.length_of_tile)\n",
+    "\n",
+    "    def clear(self):\n",
+    "        self.ti.clear()\n",
     "\n",
     "    \n",
     "\n",
@@ -4214,7 +4218,7 @@
     "\n",
     "tile_b = tile(ti, 100, padding)\n",
     "tile_m = tile(ti, 80, padding+20)\n",
-    "tile_s = tile(ti, 60, padding+40)\n",
+    "tile_s = tile(ti, 60, padding+40) \n",
     "\n",
     "#t1.draw_big_tile()\n",
     "#t1.draw_medium_tile()\n",
@@ -4227,6 +4231,10 @@
     "tile_b.draw_tile(t3)\n",
     "tile_m.draw_tile(t3)\n",
     "tile_s.draw_tile(t3)\n",
+    "\n",
+    "tile_s.clear()\n",
+    "\n",
+    "tile_s.draw_tile(t1)\n",
     "\n"
    ]
   },
