refactor: add the capacity to instantiate multiple turtle to allow independently management of them

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4216,9 +4216,9 @@
     "t3.draw()\n",
     "\n",
     "\n",
-    "tile_b = tile(ti, 100, padding)\n",
-    "tile_m = tile(ti, 80, padding+20)\n",
-    "tile_s = tile(ti, 60, padding+40) \n",
+    "tile_b = tile(100, padding)\n",
+    "tile_m = tile(80, padding+20)\n",
+    "tile_s = tile(60, padding+40) \n",
     "\n",
     "#t1.draw_big_tile()\n",
     "#t1.draw_medium_tile()\n",
