refactor: re-implement the instantiation of the turtle for the tile

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4180,8 +4180,8 @@
     "        self.t.right(90)\n",
     "\n",
     "class tile:\n",
-    "    def __init__(self,ti, lot, pad):\n",
-    "        self.ti = ti\n",
+    "    def __init__(self,lot, pad):\n",
+    "        self.ti = turtle.Turtle()\n",
     "        self.length_of_tile =  lot\n",
     "        self.padding = pad\n",
     "\n",
