chore: hide the turtle for a better presentation

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4184,11 +4184,13 @@
     "        self.ti = turtle.Turtle()\n",
     "        self.length_of_tile =  lot\n",
     "        self.padding = pad\n",
+    "        self.ti.hideturtle()\n",
     "\n",
     "    def draw_tile(self, t):\n",
     "        tile_x_axis = t.x_axis - self.length_of_tile/2\n",
     "        tile_y_axis = t.y_axis + self.padding\n",
     "        self.ti.showturtle()\n",
+    "        self.ti.hideturtle()\n",
     "        self.ti.penup()\n",
     "        self.ti.goto(tile_x_axis,tile_y_axis)\n",
     "        self.ti.pensize(4)\n",
