refacotr: replace the turtle method for clearing the tile

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4200,9 +4200,8 @@
     "        self.ti.forward(self.length_of_tile)\n",
     "\n",
     "    def clear(self):\n",
-    "        self.ti.clear()\n",
+    "        self.ti.reset()\n",
     "\n",
-    "    \n",
     "\n",
     "\n",
     "\n",
