--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4189,8 +4189,8 @@
     "    def draw_tile(self, t):\n",
     "        tile_x_axis = t.x_axis - self.length_of_tile/2\n",
     "        tile_y_axis = t.y_axis + self.padding\n",
-    "        self.ti.showturtle()\n",
     "        self.ti.hideturtle()\n",
+    "        self.ti.speed(2)\n",
     "        self.ti.penup()\n",
     "        self.ti.goto(tile_x_axis,tile_y_axis)\n",
     "        self.ti.pensize(4)\n",
