test: draw small sample cases

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4231,9 +4231,12 @@
     "tile_m.draw_tile(t3)\n",
     "tile_s.draw_tile(t3)\n",
     "\n",
+    "tile_m.clear()\n",
     "tile_s.clear()\n",
-    "\n",
+    "tile_m.draw_tile(t1)\n",
     "tile_s.draw_tile(t1)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
