chore: initial implementation of the printtile

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4084,7 +4084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4131,6 +4131,11 @@
     "        tower_of_hanoi(n-1, f, t, h)\n",
     "        move_disk(f, t)\n",
     "        tower_of_hanoi(n-1, h, f, t)\n",
+    "\n",
+    "def print_tile(src, dest):\n",
+    "    pass\n",
+    "    # if 1 = to the smallest=tile_s and 3= highest= tileb and A= the first stack = t1 , b=middle= t2, c= destination= t3\n",
+    "\n",
     "\n",
     "\n",
     "feeling_up_disks(3, A)\n",
