chore: implementation of the printtile

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4111,6 +4111,79 @@
     "\n",
     "from pythonds.basic import Stack2\n",
     "\n",
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "myWin = turtle.Screen()\n",
+    "\n",
+    "t.penup()\n",
+    "\n",
+    "t.goto(-90, 0)\n",
+    "t.pendown()\n",
+    "length = 200\n",
+    "padding = 5 \n",
+    "t.speed(1)\n",
+    "\n",
+    "\n",
+    "class tower:\n",
+    "    def __init__(self, t, x, y, length):\n",
+    "        self.t = t\n",
+    "        self.x_axis = x\n",
+    "        self.y_axis = y\n",
+    "        self.length = length\n",
+    "\n",
+    "    def draw(self):\n",
+    "        self.t.penup()\n",
+    "        self.t.goto(self.x_axis, self.y_axis)\n",
+    "        self.t.pensize(2)\n",
+    "        self.t.pencolor(\"blue\")\n",
+    "        self.t.pendown()\n",
+    "        self.t.left(90)\n",
+    "        self.t.forward(self.length)\n",
+    "        self.t.right(90)\n",
+    "\n",
+    "class tile:\n",
+    "    def __init__(self,lot, pad):\n",
+    "        self.ti = turtle.Turtle()\n",
+    "        self.length_of_tile =  lot\n",
+    "        self.padding = pad\n",
+    "        self.ti.hideturtle()\n",
+    "\n",
+    "    def draw_tile(self, t):\n",
+    "        tile_x_axis = t.x_axis - self.length_of_tile/2\n",
+    "        tile_y_axis = t.y_axis + self.padding\n",
+    "        self.ti.hideturtle()\n",
+    "        self.ti.speed(2)\n",
+    "        self.ti.penup()\n",
+    "        self.ti.goto(tile_x_axis,tile_y_axis)\n",
+    "        self.ti.pensize(4)\n",
+    "        self.ti.pencolor(\"brown\")\n",
+    "        self.ti.pendown()\n",
+    "        self.ti.left(0)\n",
+    "        self.ti.forward(self.length_of_tile)\n",
+    "\n",
+    "    def clear(self):\n",
+    "        self.ti.reset()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "t1 = tower(t, -100, 0, length)\n",
+    "t2 = tower(t, 0, 0, length)\n",
+    "t3 = tower(t, 100, 0, length)\n",
+    "\n",
+    "\n",
+    "t1.draw()\n",
+    "t2.draw()\n",
+    "t3.draw()\n",
+    "\n",
+    "\n",
+    "tile_b = tile(100, padding)\n",
+    "tile_m = tile(80, padding+20)\n",
+    "tile_s = tile(60, padding+40) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "A = Stack2(\"A\")\n",
     "B = Stack2(\"B\")\n",
     "C = Stack2(\"C\")\n",
@@ -4132,8 +4205,25 @@
     "        move_disk(f, t)\n",
     "        tower_of_hanoi(n-1, h, f, t)\n",
     "\n",
-    "def print_tile(src, dest):\n",
-    "    pass\n",
+    "def print_tile(tile, src, dest):\n",
+    "    tile_var = None\n",
+    "    if tile == 1: \n",
+    "        tile_var = tile_s\n",
+    "    elif tile == 2:\n",
+    "        tile_var = tile_m\n",
+    "    elif tile == 3:\n",
+    "        tile_var == tile_b\n",
+    "\n",
+    "    tower_src = None \n",
+    "    tower_dest = None\n",
+    "\n",
+    "    if  src == A:\n",
+    "        tower_src = t1\n",
+    "    elif src == B:\n",
+    "        tower_src = t2\n",
+    "    elif src == C:\n",
+    "        tower_src = t3\n",
+    "        \n",
     "    # if 1 = to the smallest=tile_s and 3= highest= tileb and A= the first stack = t1 , b=middle= t2, c= destination= t3\n",
     "\n",
     "\n",
