feat: define the parameters of the function

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4194,6 +4194,7 @@
     "def move_disk(src, dest):\n",
     "    moved_disk = src.pop()\n",
     "    print(f\"Moving {moved_disk} from {src.name} to {dest.name}\")\n",
+    "    print_tile(moved_disk, dest.name)\n",
     "    if moved_disk:\n",
     "        dest.push(moved_disk)\n",
     "\n",
