refactor: remove unused parameters

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4206,7 +4206,7 @@
     "        move_disk(f, t)\n",
     "        tower_of_hanoi(n-1, h, f, t)\n",
     "\n",
-    "def print_tile(tile, src, dest):\n",
+    "def print_tile(tile, dest):\n",
     "    tile_var = None\n",
     "    if tile == 1: \n",
     "        tile_var = tile_s\n",
