feat: add a function to create the tower with tiles

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4225,9 +4225,13 @@
     "    elif src == C:\n",
     "        tower_src = t3\n",
     "        \n",
+    "def feeling_up_disk(dest):\n",
+    "    tile_b.draw_tile(dest)\n",
+    "    tile_m.draw_tile(dest)\n",
+    "    tile_s.draw_tile(dest)\n",
     "\n",
     "feeling_up_disks(3, A)\n",
-    "\n",
+    "feeling_up_disk(t1)\n",
     "print(f\"to be moved disks  from {A.name} = {A.items} to {C.name} = {C.items}\")\n",
     "tower_of_hanoi(3, A, B, C)\n",
     "\n",
