feat: implement the function of moving the tiles

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4213,17 +4213,19 @@
     "    elif tile == 2:\n",
     "        tile_var = tile_m\n",
     "    elif tile == 3:\n",
-    "        tile_var == tile_b\n",
+    "        tile_var = tile_b\n",
     "\n",
-    "    tower_src = None \n",
-    "    tower_dest = None\n",
-    "\n",
-    "    if  src == A:\n",
-    "        tower_src = t1\n",
-    "    elif src == B:\n",
-    "        tower_src = t2\n",
-    "    elif src == C:\n",
-    "        tower_src = t3\n",
+    "    tower_dest = None \n",
+    "    \n",
+    "    if  dest == 'A':\n",
+    "        tower_dest = t1\n",
+    "    elif dest == 'B':\n",
+    "        tower_dest = t2\n",
+    "    elif dest == 'C':\n",
+    "        tower_dest = t3\n",
+    "    \n",
+    "    tile_var.clear()\n",
+    "    tile_var.draw_tile(tower_dest)\n",
     "        \n",
     "def feeling_up_disk(dest):\n",
     "    tile_b.draw_tile(dest)\n",
