chore: add exercises for chapter 7

--- a/pythonds-7-PE.ipynb
+++ b/pythonds-7-PE.ipynb
@@ -366,6 +366,141 @@
     "r.getRightChild().setRootVal('hello')\n",
     "print(r.getRightChild().getRootVal())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises from chapter 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "1. Extend the \"buildParseTree\" function to handle mathematical expressions that do not \n",
+    "have spaces between every character.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "2. Modify the \"buildParseTree\" and \"evaluate\" functions to handle boolean statements (and, or, and not).\n",
+    "Remember that \"not\" is a unary operator, so this will complicate your code somewhat.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "3. Using the \"findSuccessor\" method, write a non-recursive inorder travesal for a binary search tree.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "4. Modify the code for a binary search tree to make it threaded. Write a non-recursive inorder traversal method for\n",
+    "the threaded binary search tree. A threaded binary tree maintains a reference from each node to its successor.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "5. Modify our implementation of the binary search tree so that it handles duplicate keys properly. That is, if a key\n",
+    "is already in the tree then the new payload should replace the old rather than add another node with the same key.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "6. Create a binary heap with a limited heap size. In other words, the heap only keeps track of the 'n' most important items.\n",
+    "if the heap grows in size to more than 'n' items the least important item is dropped\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "7. Clean up the 'printexp' function so that it does not include an 'extra' set of parentheses around each number.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "8. Using the 'buildHeap' method, write a sorting function that can sort a list in O(nlogn) time.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "9. Write a function that takes a parse tree for a mathematical expression and calculate the derivative of the expression\n",
+    "with respect to some variable.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "10. Implement a binary heap as a max heap.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "11. Using the 'BinaryHeap' class, implement a new class called Priority Queue. Your 'PriorityQueue' class should implement\n",
+    "the constructor, plus the 'enqueue' and 'dequeue' methods\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
