chore: add exercises for chapter 8

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -714,11 +714,129 @@
    "id": "e1b2e942",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1451b7f7",
+   "metadata": {},
+   "source": [
+    "# Exercises from chapter 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93dab1ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "1. Modify the depth first search function to produce a topological sort\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f22f29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "2. Modify the depth first search to produce strongly connected components. \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91d2b24a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "3. Write the 'transpose' method for the 'Graph' class\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b33ae54c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "4. Using breadth first search write an algorithm that can determine the shortest path from each\n",
+    "vertex to every other vertex. This is called the all pairs shortest path problem.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99cadb3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "5. Using breadth first search revise the maze program from the recursion chapter to find the shortest path out of a maze.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b3c487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "6. Write a program to solve the following problem: You have two jugs, a 4-gallon and a 3-gallon.\n",
+    "Neither of the jugs has markings on them. There is a pump that can be used to fill the jugs \n",
+    "with water. How can you get exactly two gallons of water in the 4 gallon jug?\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e3f9b65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "7. Generalize the problem above so that the parameters to your solution include the sizes of each jug\n",
+    "and the final amount of water to be left in the larger jug.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0811b699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "8. Write a program that solves the following problem: Three missionaries and three cannibals \n",
+    "come to a river and find a boat that holds two people. Everyone must get across the river to \n",
+    "continue on the journey. However, if the cannibals ever outnumber the missionaries on either\n",
+    "bank, the missionaries will be eaten. Find a series of crossings that will get everyone safely to\n",
+    "the other side of the river.\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "3.12.6",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
