--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4379,9 +4379,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1   \n",
+      "      1   1   \n",
+      "    1   2   1   \n",
+      "  1   3   3   1   \n",
+      "1   4   6   4   1   \n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "13. Pascal’s triangle is a number triangle with numbers arranged in staggered rows such that\n",
@@ -4389,13 +4401,43 @@
     "This equation is the equation for a binomial coefficient.\n",
     "You can build Pascal’s triangle by adding the two numbers that are diagonally above a number in the triangle.\n",
     "An example of Pascal’s triangle is shown below.\n",
-    "        1\n",
+    "        1 \n",
     "      1   1\n",
     "    1   2   1\n",
     "  1   3   3   1\n",
     "1   4   6   4   1\n",
     "Write a program that prints out Pascal’s triangle. Your program should accept a parameter that tells how many rows of the triangle to print.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "def pascal_triangle(n: int):\n",
+    "    if n == 1:\n",
+    "      return [1]\n",
+    "    else:\n",
+    "      previous = pascal_triangle(n-1)\n",
+    "      result = [1]\n",
+    "      if n >= 2:\n",
+    "        for i in range(len(previous)-1):\n",
+    "          result.append(previous[i]+previous[i+1])\n",
+    "      result.append(1)\n",
+    "      return result\n",
+    "\n",
+    "def print_pascal_triangle(n: int):\n",
+    "  num_spaces = n+3\n",
+    "  for i in range(n):\n",
+    "    result_pascal_triangle = pascal_triangle(i+1)\n",
+    "    if num_spaces < 0:\n",
+    "      num_spaces = 0\n",
+    "    print(' ' * num_spaces, end=\"\")\n",
+    "    list_nums = len(result_pascal_triangle)\n",
+    "    for j in range(list_nums):\n",
+    "      if j != list_nums:\n",
+    "        print(f\"{result_pascal_triangle[j]}\" + '   ', end=\"\")\n",
+    "      else:\n",
+    "        print(f\"{result_pascal_triangle[j]}\")\n",
+    "    print()\n",
+    "    num_spaces -= 2 \n",
+    "\n",
+    "print_pascal_triangle(5)\n"
    ]
   },
   {
