chore: solve the knapsack problem 14

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4445,6 +4445,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_profit is 29\n",
+      "The maximum value (recursive) for a capacity of 20 is: $29\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "14. Suppose you are a computer scientist/art thief who has broken into a major art gallery.\n",
