chore: add documents for timeit repeat method

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6d8055b7-4ad1-4f4f-b72b-7efe9e603309",
    "metadata": {},
    "outputs": [
@@ -254,6 +254,14 @@
     "enqueue => O(1), dequeue => O(n)\n",
     "6. Design and implement an experiment to do benchmark comparisons of the two queue implementations,\n",
     "what can you learn from such an experiment.\n",
+    "The timeit.repeat() function is part of Python's standard timeit module and can be used in your scripts or via the command-line interface. \n",
+    "Key Arguments:\n",
+    "\n",
+    "    stmt: The statement or code snippet to be timed (as a string).\n",
+    "    setup: Code run once before each timing experiment begins (e.g., importing necessary functions, initializing variables). The timing of the setup code is not included in the results.\n",
+    "    number: The number of times the stmt is executed within a single timing run (default is 1,000,000). The result for each run is the total time for all these executions.\n",
+    "    repeat: The number of times the entire timing experiment (including setup but excluding the internal number loop's setup) is repeated (default is 5 in Python 3.7+; 3 in older versions).\n",
+    "    globals: A dictionary specifying the global variables to \n",
     "\"\"\"\n",
     "import timeit\n",
     "from pythonds.basic import Queue2,Queue\n",
