chore: solve exercises 15

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4474,23 +4474,128 @@
     "  4        5           8\n",
     "  5        9          10\n",
     "\n",
-    "\"\"\""
+    "thinking algo:\n",
+    "- dict of a list of two elements\n",
+    "- check for an item with the highest value with the minimun weight loss\n",
+    "\"\"\"\n",
+    "weight_list: list = [2, 3, 4, 5, 9]\n",
+    "its_value: list = [3, 4, 8, 8, 10]\n",
+    "\n",
+    "#def max_profit_min_weight(item1, item2: list):\n",
+    "#    if min(item1[0], item2[0]) == item1[0] and max(item1[1], item2[1]) == item1[1]:\n",
+    "\n",
+    "def knapsack_resolver(num_of_items: int, weights: list, values: list, remainder_weight: int) -> int:\n",
+    "    max_with_included_current_item = 0\n",
+    "    if num_of_items == 0 or remainder_weight == 0:\n",
+    "        return 0 \n",
+    "    if weights[num_of_items-1] <= remainder_weight:\n",
+    "        max_with_included_current_item = values[num_of_items-1] + knapsack_resolver(num_of_items-1, weights, values, remainder_weight-weights[num_of_items-1])\n",
+    "    max_with_excluded_current_item = knapsack_resolver(num_of_items-1, weights, values, remainder_weight)\n",
+    "    return max(max_with_excluded_current_item, max_with_included_current_item)\n",
+    "\n",
+    "def knapsack_problem(list_of_weights: list, list_of_its_values: list, max_weight: int) -> None:\n",
+    "  num_of_items: int = len(list_of_weights)\n",
+    "  max_profit : int = knapsack_resolver(num_of_items, list_of_weights, list_of_its_values, max_weight)\n",
+    "  print(f\"max_profit is {max_profit}\")\n",
+    "\n",
+    "knapsack_problem(weight_list, its_value, 20)\n",
+    "\n",
+    "def knapsack_recursive(weights, values, W):\n",
+    "    \"\"\"\n",
+    "    Solves the 0/1 Knapsack Problem using a top-down recursive approach with memoization.\n",
+    "\n",
+    "    Args:\n",
+    "        weights (list): List of item weights (w_i).\n",
+    "        values (list): List of item values (v_i).\n",
+    "        W (int): Maximum knapsack capacity.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The maximum total value that can be achieved.\n",
+    "    \"\"\"\n",
+    "    N = len(weights)\n",
+    "    \n",
+    "    # Initialize the memoization table (N+1 rows, W+1 columns) \n",
+    "    # -1 indicates that the subproblem has not been solved yet.\n",
+    "    memo = [[-1 for _ in range(W + 1)] for _ in range(N)]\n",
+    "\n",
+    "    # We use a helper function to handle the recursion\n",
+    "    def solve(i, current_w):\n",
+    "        \"\"\"\n",
+    "        Calculates the max value using items from index i onwards, \n",
+    "        given the remaining capacity current_w.\n",
+    "        \"\"\"\n",
+    "        # Base Case 1: If we have considered all items\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        \n",
+    "        # Base Case 2: Check memoization table\n",
+    "        if memo[i][current_w] != -1:\n",
+    "            return memo[i][current_w]\n",
+    "        \n",
+    "        # Current item properties\n",
+    "        w_i = weights[i]\n",
+    "        v_i = values[i]\n",
+    "\n",
+    "        # -----------------------------------------------------------------\n",
+    "        # Choice 1: EXCLUDE the current item (Item i)\n",
+    "        # We move to the next item (i+1) with the same capacity (current_w)\n",
+    "        exclude_val = solve(i + 1, current_w)\n",
+    "        \n",
+    "        # -----------------------------------------------------------------\n",
+    "        # Choice 2: INCLUDE the current item (Item i)\n",
+    "        include_val = 0\n",
+    "        if w_i <= current_w:\n",
+    "            # If we include it, we add its value and move to the next item (i+1)\n",
+    "            # with the remaining capacity (current_w - w_i)\n",
+    "            include_val = v_i + solve(i + 1, current_w - w_i)\n",
+    "\n",
+    "        # -----------------------------------------------------------------\n",
+    "        # Final Decision: Take the maximum of the two choices\n",
+    "        max_val = max(exclude_val, include_val)\n",
+    "        \n",
+    "        # Store the result in the memo table before returning\n",
+    "        memo[i][current_w] = max_val\n",
+    "        return max_val\n",
+    "\n",
+    "    # Start the recursion from the first item (index 0) with the full capacity (W)\n",
+    "    return solve(0, W)\n",
+    "\n",
+    "\n",
+    "max_value = knapsack_recursive(weight_list, its_value, 20)\n",
+    "print(f\"The maximum value (recursive) for a capacity of 20 is: ${max_value}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mobilechelonian' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 9\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;03m15. This problem is called the string edit distance problem, and is quite useful in many areas of research.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03mSuppose that you want to transform the word “algorithm” into the word “alligator.” \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03mUse dynamic programming techniques to develop an algorithm that gives you the smallest edit distance between any two words.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mmobilechelonian\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mobilechelonian' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "===================================\n",
+      "\n",
+      "src:  - dst: : ret_iter: 0 - ret_rec:0\n",
+      "src:  - dst: A: ret_iter: 1 - ret_rec:1\n",
+      "src: A - dst: : ret_iter: 1 - ret_rec:1\n",
+      "src: AB - dst: : ret_iter: 2 - ret_rec:2\n",
+      "src:  - dst: AB: ret_iter: 2 - ret_rec:2\n",
+      "src: A - dst: A: ret_iter: 0 - ret_rec:0\n",
+      "src: A - dst: AB: ret_iter: 1 - ret_rec:1\n",
+      "src: ABC - dst: DEF: ret_iter: 3 - ret_rec:3\n",
+      "src: abcd - dst: bcfe: ret_iter: 3 - ret_rec:3\n",
+      "src: aaaaaaaa - dst: aaaaaaaa: ret_iter: 0 - ret_rec:0\n",
+      "src: algorithm - dst: alligator: ret_iter: 6 - ret_rec:6\n",
+      "===================================\n",
+      "0\n",
+      "5\n",
+      "20\n",
+      "30\n",
+      "135\n"
      ]
     }
    ],
