chore: update metadata information

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4442,13 +4442,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -4606,16 +4599,118 @@
     "For each letter you can either copy the letter from one word to another at a cost of 5, you can delete a letter at cost of 20, or insert a letter at a cost of 20.\n",
     "The total cost to transform one word into another is used by spell check programs to provide suggestions for words that are close to one another.\n",
     "Use dynamic programming techniques to develop an algorithm that gives you the smallest edit distance between any two words.\n",
+    "replace = DT[i-1][j-1]\n",
+    "insert = DT[i][j-1]\n",
+    "delete = DT[i-1][j-1]\n",
     "\"\"\"\n",
-    "\n"
+    "# Thinking about the algorithms\n",
+    "\n",
+    "SRC=\"ABC\"\n",
+    "DST=\"ACD\"\n",
+    "\n",
+    "def min_cost(s1: str, s2: str) -> int:\n",
+    "    length_of_src_string = len(s1) + 1\n",
+    "    length_of_dst_string = len(s2) + 1\n",
+    "    DT = [[0 for _ in range(length_of_src_string)] for _ in range(length_of_dst_string)]\n",
+    "\n",
+    "    for j in range(length_of_src_string):\n",
+    "        DT[0][j] = j\n",
+    "\n",
+    "    for i in range(length_of_dst_string):\n",
+    "        DT[i][0] = i\n",
+    "    \n",
+    "    for i in range(1, length_of_dst_string):\n",
+    "        for j in range(1, length_of_src_string):\n",
+    "            if s1[j - 1] != s2[i-1]:\n",
+    "                DT[i][j] = 1 + min(DT[i-1][j], DT[i][j-1],DT[i-1][j-1])\n",
+    "            else:\n",
+    "                DT[i][j] = DT[i-1][j-1]\n",
+    "    return DT[0 if length_of_dst_string == 0 else length_of_dst_string-1][0 if length_of_src_string == 0 else length_of_src_string-1]\n",
+    "\n",
+    "print(min_cost(SRC, DST))\n",
+    "\n",
+    "def rec_min_cost(s1: str, s2: str, len_src, len_dst) -> int:\n",
+    "    if len_dst == 0 and len_src == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    if len_src > 0 and len_dst == 0:\n",
+    "        return len_src\n",
+    "\n",
+    "    if len_src == 0 and len_dst > 0:\n",
+    "        return len_dst\n",
+    "    \n",
+    "    if len_src > 0 and len_dst > 0:\n",
+    "        if s1[len_src-1] == s2[len_dst-1]:\n",
+    "            return rec_min_cost(s1,s2, len_src-1, len_dst-1)\n",
+    "        else:\n",
+    "            return 1 + min(\n",
+    "                rec_min_cost(s1, s2, len_src-1, len_dst),\n",
+    "                rec_min_cost(s1, s2, len_src-1, len_dst-1),\n",
+    "                rec_min_cost(s1, s2, len_src, len_dst-1)\n",
+    "            )\n",
+    "\n",
+    "print(rec_min_cost(SRC, DST, len(SRC), len(DST)))\n",
+    "\n",
+    "testing_data = [\n",
+    "    (\"\", \"\"),\n",
+    "    (\"\", \"A\"),\n",
+    "    (\"A\", \"\"),\n",
+    "    (\"AB\", \"\"),\n",
+    "    (\"\", \"AB\"),\n",
+    "    (\"A\", \"A\"),\n",
+    "    (\"A\", \"AB\"),\n",
+    "    (\"ABC\", \"DEF\"),\n",
+    "    (\"abcd\", \"bcfe\"),\n",
+    "    (\"aaaaaaaa\", \"aaaaaaaa\"),\n",
+    "    (\"algorithm\", \"alligator\")\n",
+    "]\n",
+    "\n",
+    "def test_two_def(data: list[tuple]) -> None:\n",
+    "    for i in data:\n",
+    "        ret_iterative: int = min_cost(i[0], i[1])\n",
+    "        ret_recursive: int = rec_min_cost(i[0], i[1], len(i[0]), len(i[1]))\n",
+    "        assert ret_iterative == ret_recursive, f\"src: {i[0]} - dst: {i[1]}: ret_iter: {ret_iterative} - ret_rec:{ret_recursive}\"\n",
+    "        print(f\"src: {i[0]} - dst: {i[1]}: ret_iter: {ret_iterative} - ret_rec:{ret_recursive}\")\n",
+    "\n",
+    "print(\"===================================\")\n",
+    "print()\n",
+    "test_two_def(testing_data)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "def solve_edit_distance_problem(s1: str, s2: str, len_src, len_dst) -> int:\n",
+    "    if len_dst == 0 and len_src == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    if len_src > 0 and len_dst == 0:\n",
+    "        return  20 * len_src\n",
+    "\n",
+    "    if len_src == 0 and len_dst > 0:\n",
+    "        return 20 * len_dst\n",
+    "    \n",
+    "    if len_src > 0 and len_dst > 0:\n",
+    "        if s1[len_src-1] == s2[len_dst-1]:\n",
+    "            return 5 + solve_edit_distance_problem(s1,s2, len_src-1, len_dst-1)\n",
+    "        else:\n",
+    "            return 20 + min(\n",
+    "                solve_edit_distance_problem(s1, s2, len_src-1, len_dst),\n",
+    "                solve_edit_distance_problem(s1, s2, len_src-1, len_dst-1),\n",
+    "                solve_edit_distance_problem(s1, s2, len_src, len_dst-1)\n",
+    "            )\n",
+    "\n",
+    "\n",
+    "stc1 = (\"\", \"\")\n",
+    "stc2 = (\"A\", \"A\")\n",
+    "stc3 = (\"A\", \"B\")\n",
+    "stc4 = (\"ABC\", \"AC\")\n",
+    "stc5 = (\"algorithm\", \"alligator\")\n",
+    "print(\"===================================\")\n",
+    "print(solve_edit_distance_problem(stc1[0], stc1[1], len(stc1[0]), len(stc1[1])))\n",
+    "print(solve_edit_distance_problem(stc2[0], stc2[1], len(stc2[0]), len(stc2[1])))\n",
+    "print(solve_edit_distance_problem(stc3[0], stc3[1], len(stc3[0]), len(stc3[1])))\n",
+    "print(solve_edit_distance_problem(stc4[0], stc4[1], len(stc4[0]), len(stc4[1])))\n",
+    "print(solve_edit_distance_problem(stc5[0], stc5[1], len(stc5[0]), len(stc5[1])))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
