--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4735,7 +4735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.12.6",
+   "display_name": "learn-py",
    "language": "python",
    "name": "python3"
   },
@@ -4749,7 +4749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
